<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.65"
        android:background="@color/banner_bg">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="125dp"
            android:layout_height="50dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:padding="5dp"
            android:src="@drawable/ic_vaccify_logo_blue">

        </androidx.appcompat.widget.AppCompatImageView>

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="220dp"
            android:layout_height="180dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:backgroundTint="@android:color/transparent"
            android:src="@drawable/ic_banner_logo" />


    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.35"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/nunito_sans_regular"
            android:padding="5dp"
            android:text="@string/enter_otp_received"
            android:textColor="@color/primaryBlack"
            android:textSize="20sp"
            android:textStyle="bold">

        </androidx.appcompat.widget.AppCompatTextView>

        <in.aabhasjindal.otptextview.OtpTextView
            android:id="@+id/otp_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            app:length="6"
            app:otp_box_background="@drawable/box_stroke"
            app:otp_box_background_active="@drawable/otp_box_active"
            app:otp_box_background_error="@drawable/otp_box_error"
            app:otp_text_size="24dp" />


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/acceptTermsTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/nunito_sans_regular"
            android:padding="5dp"
            android:text="@string/terms_conditions"
            android:textColor="@color/primary">

        </androidx.appcompat.widget.AppCompatTextView>


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/resendOtpTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/nunito_sans_regular"
            android:padding="5dp"
            android:text="@string/resend_otp"
            android:textColor="@color/primary"
            android:textStyle="bold"
            tools:ignore="RelativeOverlap">

        </androidx.appcompat.widget.AppCompatTextView>


    </LinearLayout>


</LinearLayout>