<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.65"
        android:background="@color/banner_bg">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="125dp"
            android:layout_height="50dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="40dp"
            android:padding="5dp"
            android:src="@drawable/ic_vaccify_logo_blue">

        </androidx.appcompat.widget.AppCompatImageView>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/logoutTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="10dp"
            android:padding="10dp"
            android:text="@string/logout"
            android:textColor="@color/primary"
            tools:ignore="RelativeOverlap">

        </androidx.appcompat.widget.AppCompatTextView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="vertical">


            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="15dp"
                android:fontFamily="@font/nunito_sans_bold"
                android:padding="5dp"
                android:text="Welcome!"
                android:textColor="@color/primaryBlack"
                android:textSize="24sp"
                android:textStyle="bold">

            </androidx.appcompat.widget.AppCompatTextView>

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="17dp"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/nunito_sans_regular"
                android:padding="5dp"
                android:text="@string/vaccinator_verifier"
                android:textColor="@color/primaryBlack"
                android:textStyle="bold">

            </androidx.appcompat.widget.AppCompatTextView>

        </LinearLayout>


    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.35"
        android:background="@color/white"
        android:orientation="vertical">


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/beneficiaryListRv"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/registerMemberBtn"
            android:layout_margin="5dp">

        </androidx.recyclerview.widget.RecyclerView>

        <RelativeLayout
            android:id="@+id/emptyPlaceholderRl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/placeHolderIv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center"
                android:scaleType="fitCenter"
                android:src="@drawable/landing_placeholder">

            </androidx.appcompat.widget.AppCompatImageView>


            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/placeHolderIv"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center"
                android:fontFamily="@font/nunito_sans_regular"
                android:scaleType="fitCenter"
                android:src="@drawable/placeholder_txt"
                android:textColor="@color/primaryBlack"
                android:textStyle="bold">

            </androidx.appcompat.widget.AppCompatImageView>


        </RelativeLayout>


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/registerMemberBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/button_stroke"
            android:fontFamily="@font/nunito_sans_bold"
            android:text="@string/register_member"
            android:textColor="@color/white" />


    </RelativeLayout>


</LinearLayout>